feat: reduce alloc